<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.example</groupId>
  <artifactId>Server</artifactId>
  <version>1.0.1</version>
  <name>Archetype - AasProject_IntellIJ_v01</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <testSourceDirectory>src/test/java</testSourceDirectory>

    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <argLine>
            --add-opens java.base/java.lang=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>

      <!-- Compile Sources using Java 8 -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <!-- Add BaSys components from local repository. This contains the dependency to the basyx.sdk-->
    <dependency>
      <groupId>org.eclipse.basyx</groupId>
      <artifactId>basyx.components.lib</artifactId>
      <version>1.5.1</version>
    </dependency>

    <!-- Add Registry AASServer.Server component dependency -->
    <dependency>
      <groupId>org.eclipse.basyx</groupId>
      <artifactId>basyx.components.registry</artifactId>
      <version>1.5.1</version>
    </dependency>

    <!-- Add AAS.AssetAdministrationShells AASServer.Server component dependency -->
    <dependency>
      <groupId>org.eclipse.basyx</groupId>
      <artifactId>basyx.components.AASServer</artifactId>
      <version>1.5.1</version>
    </dependency>


    <!-- JUnit 4 for running JUnit tests -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.basyx</groupId>
      <artifactId>basyx.sdk</artifactId>
      <version>1.5.1</version>
    </dependency>
  </dependencies>
</project>
